[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/GlobalControlScene.gd" type="Script" id=1]
[ext_resource path="res://Audio/SFX/BombTickLoop.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/SFX/Death.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Music/menu_ambient.ogg" type="AudioStream" id=4]
[ext_resource path="res://Audio/Music/Termination Imminent.ogg" type="AudioStream" id=5]
[ext_resource path="res://Audio/Music/Menu_music.ogg" type="AudioStream" id=6]

[node name="GlobalControlScene" type="Node2D"]
script = ExtResource( 1 )

[node name="DeathCountdownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -80.0
autoplay = true

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
